<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    
    <item
        android:id="@+id/nav_campaigns"
        android:icon="@drawable/ic_campaigns"
        android:title="@string/nav_campaigns" />
    
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history" />
    
    <item
        android:id="@+id/nav_achievements"
        android:icon="@drawable/ic_achievement"
        android:title="@string/nav_achievements" />
    
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
    
</menu>